@@ -8,6 +8,7 @@ Cleaned up log messages and telescope server loading logic. (revision 6036)
 Expanded significantly the Help section. (revision 6057)
 Renamed "FOV cirles" to "field of view indicators". (revision 6110)
 Separate options for toggling reticles and FOV indicators. (revision 6110)
+Added slewing to the current center of the viewport (Alt+[num]). (revision 6149)
 
 [0.1.9] (2010-01-26) (revision 5769)
 Branched telescope server code to simplify building. (revision 5671)
